# aoc-2023

./: CMakeLists.txt
include/: debug.h
puzzle-1/: puzzle-1.cpp
puzzle-10/: puzzle-10.cpp
puzzle-17/: puzzle-17-alt.cpp  puzzle-17.cpp
puzzle-18/: puzzle-18.cpp
puzzle-19/: puzzle-19-tests.cpp  puzzle-19.cpp
puzzle-2/: puzzle-2.cpp
puzzle-20/: puzzle-20-impl.cpp  puzzle-20-tests.cpp  puzzle-20.cpp  puzzle-20.hpp
puzzle-3/: puzzle-3.cpp
puzzle-4/: puzzle-4.cpp
puzzle-5/: puzzle-5.cpp
puzzle-6/: puzzle-6.cpp
puzzle-7/: puzzle-7.cpp
puzzle-8/: puzzle-8.cpp
puzzle-9/: puzzle-9.cpp
